Semi fix bug with history on mobile

--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ Mobile Style
     height: 144vw;
     width: 90vw;
     margin-left: 5vw;
+    left: 0;
   }
 
   ::-webkit-scrollbar {
